# flask-blog

./: .gitignore  README.md  app.py  auth.py  pyproject.toml  requirements.txt  tes.py
static/: bits_of_moss.css  one-dark.css  one_dark.css  style.css
templates/: base.html  blog-post.html  blog.html  login.html  page.html
templates/macros/: blog.html
